check_log.txt
    Checking speed-limit v0.1.0 (C:\0_CODE\speed-limit)
error[E0308]: mismatched types
   --> src\app.rs:116:13
    |
114 |         fonts.font_data.insert(
    |                         ------ arguments to this method are incorrect
115 |             "msjh".to_owned(),
116 |             egui::FontData::from_owned(font_data),
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Arc<FontData>`, found `FontData`
    |
    = note: expected struct `Arc<FontData>`
               found struct `FontData`
help: the return type of this call is `FontData` due to the type of the argument passed
   --> src\app.rs:114:9
    |
114 | /         fonts.font_data.insert(
115 | |             "msjh".to_owned(),
116 | |             egui::FontData::from_owned(font_data),
    | |             ------------------------------------- this argument influences the return type of `insert`
117 | |         );
    | |_________^
note: method defined here
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\alloc\src\collections\btree\map.rs:1046:11
help: call `Into::into` on this expression to convert `FontData` into `Arc<FontData>`
    |
116 |             egui::FontData::from_owned(font_data).into(),
    |                                                  +++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `speed-limit` (bin "speed-limit") due to 1 previous error
